--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1630,8 +1630,6 @@ input, select, textarea {
 		.image img {
 			display: block;
 			width: 100%;
-			height: 230px;
-			object-fit: cover;
 		}
 
 		.image.fit {
@@ -1644,6 +1642,10 @@ input, select, textarea {
 			width: 100%;
 			margin: 0 0 2em 0;
 		}
+			.image.featured img {
+				height: 230px;
+				object-fit: cover;
+			}
 
 		.image.left {
 			float: left;
